# subprocess.hpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README-zh_CN.md  README.md
.ai/: system_prompt.md
.github/workflows/: bsd.yml  cmake-multi-platform.yml  msys2.yml
.vim/: coc-settings.json
include/: subprocess.hpp
include/subprocess/: subprocess.hpp
tests/: CMakeLists.txt  run_coverage.cmake  simple_test.cpp  temp_file.cc  temp_file.h  test_background.cc  test_basic.cc  test_buffer_callback.cc  test_buffer_lines.cc  test_capture_output.cc  test_capture_stdin.cc  test_codepage.cc  test_concept.cc  test_const_buffer.cc  test_cwd.cc  test_detach.cc  test_devnull.cc  test_dup.cc  test_dynamic_buffer.cc  test_env.cc  test_environment.cc  test_error_handling.cc  test_executable_resolution.cc  test_exit_code.cc  test_filename_with_space.cc  test_filesystem_path.cc  test_find_executable.cc  test_io.cc  test_multiplex.cc  test_newgroup.cc  test_pipe.cc  test_pipe_reader_writer.cc  test_pipeline.cc  test_posix_spawn_error_handling.cc  test_read_write_some.cc  test_redirect.cc  test_run_failed.cc  test_run_scenarios.cc  test_shell_command.cc  test_split.cc  (+6 more)
